appId: host.exp.Exponent
---
- launchApp
- tapOn: "Features"
- assertVisible: "Features"
- tapOn: "Components"
- assertVisible: "Components"
- tapOn: "Settings"
- assertVisible: "Settings"
- tapOn: "Home"
- assertVisible: "Magic Expo"
